vcs/specs/parser/fail/contexts/invalid_using_clause.vr
// @test: parse-fail
// @level: L0
// @tags: parser, contexts, using, invalid-args, error
// @description: Test invalid using clause with curly braces instead of brackets
// @expected-error: E018

fn foo() using {} {
    let x = 42;
}
